--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,17 @@
 </head>
 <body>
   <h1>List of Names</h1>
-<table class="table">
+<table class="table" id="names">
   <thead class="table_thead">
     <tr>
       <th>First name</th>
       <th>Last Name</th>
       <th>Address</th>
+      <th>City</th>
+      <th>State</th>
+      <th>Zip</th>
     </tr>
+    
   </thead>
 </table>
   <!-- build:js ./assets/scripts/App.js -->
