Feature progress: Filtering working. Need to remove table rows.

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
@@ -17,23 +18,66 @@
   <!-- endbuild -->
 
 </head>
+
 <body>
-  <h1>List of Names</h1>
-<table class="table" id="names">
-  <thead class="table_thead">
-    <tr>
-      <th>First name</th>
-      <th>Last Name</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Zip</th>
-    </tr>
-    
-  </thead>
-</table>
+  <form id="filter-results">
+    <div class="form-group">
+      <label for="filter-criteria">Filter Results by: </label>
+      <input id="filter" type="text">
+    <button id="filter-submit">submit</button>
+    </div>
+  </form>
+  <table class="table" id="names">
+    <thead class="table_thead">
+      <tr>
+        <th colspan="6"><h3>List of Names</h3></th>
+      </tr>
+      <tr>
+        <th>First name</th>
+        <th>Last Name</th>
+        <th>Address</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Zip</th>
+      </tr>
+
+    </thead>
+  </table>
+
+  <div class="add-name-form">
+    <form>
+      <div class="form-group">
+        <label for="firstName">First Name: </label>
+        <input name="firstName" type="text">
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name: </label>
+        <input name="lastName" type="text">
+      </div>
+      <div class="form-group">
+        <label for="address">Street Address: </label>
+        <input name="address" type="text">
+      </div>
+      <div class="form-group">
+        <label for="city">City: </label>
+        <input name="city" type="text">
+      </div>
+      <div class="form-group">
+        <label for="state">State: </label>
+        <input name="state" type="text">
+      </div>
+      <div class="form-group">
+        <label for="zipcode">Zip Code: </label>
+        <input name="zipcode" type="text">
+      </div>
+      <div class="form-group">
+      <button type="submit">Add Name</button>
+      </div>
+    </form>
+  </div>
   <!-- build:js ./assets/scripts/App.js -->
   <script src="/temp/scripts/App.js"></script>
   <!-- endbuild -->
 </body>
+
 </html>
