Refactor: Populating table is now set to iterating map function.

--- a/app/index.html
+++ b/app/index.html
@@ -24,15 +24,18 @@
     <div class="form-group">
       <label for="filter-criteria">Filter Results by: </label>
       <input id="filter" type="text">
-    <button id="filter-submit">submit</button>
+      <button id="filter-submit">submit</button>
     </div>
   </form>
   <table class="table" id="names">
     <thead class="table_thead">
       <tr>
-        <th colspan="6"><h3>List of Names</h3></th>
+        <th colspan="7">
+          <h3>List of Names</h3>
+        </th>
       </tr>
       <tr>
+        <th>ID</th>
         <th>First name</th>
         <th>Last Name</th>
         <th>Address</th>
@@ -71,7 +74,7 @@
         <input name="zipcode" type="text">
       </div>
       <div class="form-group">
-      <button type="submit">Add Name</button>
+        <button type="submit">Add Name</button>
       </div>
     </form>
   </div>
